--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multimeter": "^0.1.1",
     "node-expat": "^2.2.0",
     "optimist": "^0.6.1",
-    "progress-stream": "^0.5.0"
+    "progress-stream": "^0.5.0",
+    "osa": "file:../node-osa"
   }
 }
